deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-node

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello-node

  template:
    metadata:
      labels:
        app: hello-node

    spec:
      containers:
      - name: hello-node
        image: surajsdm/hello-node:24
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
