service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello-node-service

spec:
  selector:
    app: hello-node

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
